# microservice-cpp

./: .gitignore  CMakeLists.txt  main.cpp
controllers/: GoodByeController.hpp  HelloController.hpp
src/application/usecases/item/: IItemUseCase.hpp  ItemUseCase.hpp
src/application/usecases/user/: IUserUseCase.hpp  UserUseCase.hpp
src/domain/entities/item/: Item.hpp
src/domain/entities/user/: User.hpp
src/domain/services/item/: ItemDomainService.hpp
src/domain/services/user/: UserDomainService.hpp
src/infrastructure/repository/item/: IItemRepository.hpp  ItemRepository.hpp
src/infrastructure/repository/user/: IUserRepository.hpp  UserRepository.hpp
src/infrastructure/rest/controllers/baseController/: Controller.hpp
src/infrastructure/rest/controllers/item/: ItemController.hpp
src/infrastructure/rest/controllers/user/: UserController.hpp
